--- a/report/project.tex
+++ b/report/project.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage[nonatbib]{np}
+\usepackage[nonatbib]{nips_2016}
 
 \usepackage[breaklinks=true,letterpaper=true,colorlinks,citecolor=black,bookmarks=false]{hyperref}
 
