--- a/report/citation.bib
+++ b/report/citation.bib
@@ -1,24 +1,95 @@
-@book{SS14,
-  title = {Understanding Machine Learning: From Theory to Algorithms},
-  author = {Shai Shalev-Shwartz and Shai Ben-David},
-  publisher = {Cambridge University Press},
-  year = {2014},
+@inproceedings{dietterich2000ensemble,
+  title={Ensemble methods in machine learning},
+  author={Dietterich, Thomas G},
+  booktitle={International workshop on multiple classifier systems},
+  pages={1--15},
+  year={2000},
+  organization={Springer}
 }
 
-@article{Block62,
-  title        = {The perceptron: A model for brain functioning},
-  author       = {H. D. Block},  
-  journal      = {Reviews of Modern Physics},  
-  volume       = {34},
-  number       = {1},
-  pages        = {123--135},
-  year         = {1962},  
+@inproceedings{freund1996experiments,
+  title={Experiments with a new boosting algorithm},
+  author={Freund, Yoav and Schapire, Robert E and others},
+  booktitle={icml},
+  volume={96},
+  pages={148--156},
+  year={1996},
+  organization={Citeseer}
 }
 
-@inproceedings{Novikoff62,
-  title        = {On Convergence proofs for perceptrons},
-  author       = {A. Novikoff},  
-  booktitle    = {Symposium on Mathematical Theory of Automata},  
-  pages        = {615--622},
-  year         = {1962},  
+@article{breiman1996bagging,
+  title={Bagging predictors},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={24},
+  number={2},
+  pages={123--140},
+  year={1996},
+  publisher={Springer}
+}
+@inproceedings{Caruana1993MultitaskLA,
+  title={Multitask Learning: A Knowledge-Based Source of Inductive Bias},
+  author={Rich Caruana},
+  booktitle={ICML},
+  year={1993}
+}
+
+@article{ruder2017overview,
+  title={An overview of multi-task learning in deep neural networks},
+  author={Ruder, Sebastian},
+  journal={arXiv preprint arXiv:1706.05098},
+  year={2017}
+}
+
+@inproceedings{lu2017fully,
+  title={Fully-adaptive feature sharing in multi-task networks with applications in person attribute classification},
+  author={Lu, Yongxi and Kumar, Abhishek and Zhai, Shuangfei and Cheng, Yu and Javidi, Tara and Feris, Rogerio},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={5334--5343},
+  year={2017}
+}
+
+@inproceedings{duong2015low,
+  title={Low resource dependency parsing: Cross-lingual parameter sharing in a neural network parser},
+  author={Duong, Long and Cohn, Trevor and Bird, Steven and Cook, Paul},
+  booktitle={Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 2: Short Papers)},
+  volume={2},
+  pages={845--850},
+  year={2015}
+}
+
+@inproceedings{yosinski2014transferable,
+  title={How transferable are features in deep neural networks?},
+  author={Yosinski, Jason and Clune, Jeff and Bengio, Yoshua and Lipson, Hod},
+  booktitle={Advances in neural information processing systems},
+  pages={3320--3328},
+  year={2014}
+}
+
+@inproceedings{raina2007self,
+  title={Self-taught learning: transfer learning from unlabeled data},
+  author={Raina, Rajat and Battle, Alexis and Lee, Honglak and Packer, Benjamin and Ng, Andrew Y},
+  booktitle={Proceedings of the 24th international conference on Machine learning},
+  pages={759--766},
+  year={2007},
+  organization={ACM}
+}
+
+@article{egan2004effects,
+  title={The effects of organizational learning culture and job satisfaction on motivation to transfer learning and turnover intention},
+  author={Egan, Toby Marshall and Yang, Baiyin and Bartlett, Kenneth R},
+  journal={Human resource development quarterly},
+  volume={15},
+  number={3},
+  pages={279--301},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{glorot2011domain,
+  title={Domain adaptation for large-scale sentiment classification: A deep learning approach},
+  author={Glorot, Xavier and Bordes, Antoine and Bengio, Yoshua},
+  booktitle={Proceedings of the 28th international conference on machine learning (ICML-11)},
+  pages={513--520},
+  year={2011}
 }
