--- a/report/citation.bib
+++ b/report/citation.bib
@@ -93,3 +93,28 @@
   pages={513--520},
   year={2011}
 }
+
+@inproceedings{huang2016mtnet,
+  title={Mtnet: a multi-task neural network for dynamic malware classification},
+  author={Huang, Wenyi and Stokes, Jack W},
+  booktitle={International Conference on Detection of Intrusions and Malware, and Vulnerability Assessment},
+  pages={399--418},
+  year={2016},
+  organization={Springer}
+}
+
+@inproceedings{girshick2015fast,
+  title={Fast r-cnn},
+  author={Girshick, Ross},
+  booktitle={Proceedings of the IEEE international conference on computer vision},
+  pages={1440--1448},
+  year={2015}
+}
+
+@inproceedings{long2017learning,
+  title={Learning multiple tasks with multilinear relationship networks},
+  author={Long, Mingsheng and Cao, Zhangjie and Wang, Jianmin and Philip, S Yu},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={1594--1603},
+  year={2017}
+}
