--- a/report/nips_2016.sty
+++ b/report/nips_2016.sty
@@ -40,17 +40,17 @@
 
 % change this every year for notice string at bottom
 \newcommand{\@nipsordinal}{1st}
-\newcommand{\@nipsyear}{2017}
+\newcommand{\@nipsyear}{2019}
 \newcommand{\@nipslocation}{Barcelona, Spain}
 
 % handle tweaks for camera-ready copy vs. submission copy
 \if@nipsfinal
   \newcommand{\@noticestring}{%
-    Submitted to Introduction to Machine Learning (CS698, \@nipsyear\ Fall). Do not distribute.%
+    Submitted to Theory of Deep Learning (CS698, \@nipsyear\ Winter). Do not distribute.%
   }
 \else
   \newcommand{\@noticestring}{%
-    Submitted to Introduction to Machine Learning (CS698, \@nipsyear\ Fall). Do not distribute.%
+    Submitted to Theory of Deep Learning (CS698, \@nipsyear\ Winter). Do not distribute.%
   }
 
   % line numbers for submission
