experiment code (base acc & combined acc)

--- a/report/project.tex
+++ b/report/project.tex
@@ -125,7 +125,7 @@ Note that the constructed model has the same amount of conputation as the baseli
 
 \section{Class-level Transfer Learning(required condition)}
 
-Unfortunately, CLDMC requires specific activation function for the last layer and loss function must be adjusted accordingly. For classification 
+Unfortunately, due to the dynamic construction of the last layer, specific setting is required to preserve the accuracy for the constructed model
 
 experimental set up
 
@@ -139,9 +139,25 @@ demonstration
 
 how sigmoid makes more sense than softmax
 
-\section{Experiments}
 
-\subsection{implementation}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 \subsection{results}
 Perform an initial review of relevant literature. Has your problem, or one of similar nature, been considered before? By whom? What are the differences or limitations (if any)?
